prevent wide im tables from overflowing over other content. scrollbar appears instead, kthxbai

--- a/less/site.less
+++ b/less/site.less
@@ -362,3 +362,7 @@ label {
     }
 
 }
+
+.results .panel-body {
+  overflow-y:auto;
+}
